--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --no-notify --transpileOnly --ignore-watch node_modules src/server.ts",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --no-notify --transpileOnly --ignore-watch node_modules src/shared/infra/http/graphql/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "apollo-server": "^2.13.1",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.4",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   }
 }
