Subarea schema isolated

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,7 +6,7 @@
   "password": "docker",
   "database": "klabin_database",
   "entities": [
-    "./src/models/*.ts"
+    "./src/modules/**/typeorm/entities/*.ts"
   ],
   "migrations": [
     "./src/shared/infra/typeorm/migrations/*.ts"
