--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
+    "no-param-reassign": "off",
     "class-methods-use-this":"off",
     "no-useless-constructor": "off",
     "@typescript-eslint/no-unused-vars" : ["error", {
