--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2017",
+    "lib": ["ES6"],
     "allowJs": true,
+    "removeComments": true,
     "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
+    // "strict": true,
     "strictPropertyInitialization": false,
     "baseUrl": "./src",
     "paths": {
@@ -18,8 +20,7 @@
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": [
-    "prettier.config.js",
-    "jest.config.js"
+  "include": [
+    "src/**/*"
   ]
 }
