--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/multer": "^1.4.3",
+    "class-transformer": "^0.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
