--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
   "type": "postgres",
-  "host": "localhost",
+  "host": "arn:aws:kms:sa-east-1:083635893872:key/6807ca07-4f67-4336-abdd-53566f1d94df",
   "port": 5432,
   "username": "postgres",
-  "password": "docker",
+  "password": "guitarrajose000",
   "database": "klabin_database",
   "entities": [
     "./src/modules/**/typeorm/entities/*.ts"
